[package]
name = "intervaltree"
documentation = "https://docs.rs/intervaltree"
repository = "https://github.com/main--/rust-intervaltree"
version = "0.2.6"
authors = ["main() <main@ehvag.de>"]
license = "MIT"
description = "A simple and generic implementation of an immutable interval tree."
categories = ["data-structures", "no-std"]
edition = "2018"

[dependencies]
smallvec = { version = "1.0.0" }

[dependencies.serde]
version = "1.0"
optional = true
default_features = false
features = ["derive"]

[features]
std = []
default = ["std"]
# serde feature implicit.

[dev_dependencies]
serde_json = "1.0"
